Stop header from expanding on small mobiles

--- a/next-app/app/_components/nav/Nav.module.css
+++ b/next-app/app/_components/nav/Nav.module.css
@@ -25,3 +25,9 @@
   font-size: 1.5rem;
   font-weight: bold;
 }
+
+@media screen and (max-width: 360px) {
+  .brandName {
+    font-size: 1.2rem;
+  }
+}
